# exec-dir-mcp

./: README.md  pyproject.toml
src/exec_dir_mcp/: __init__.py  main.py
