[project]
name = "exec-dir-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "YunHai", email = "yunhai@bybxbwg.fun" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
exec-dir-mcp = "exec_dir_mcp.main:main"