[project]
name = "exec-dir-mcp"
version = "1.0.2"
description = "MCP服务器，支持在指定目录中安全执行命令"
readme = "README.md"
authors = [
    { name = "YunHai", email = "yunhai@yhnotes.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
exec-dir-mcp = "exec_dir_mcp.main:main"